tests/kyverno/forward-auth-injection/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: inject-forward-auth
policies:
  - ../../../kubernetes/cluster-policies/clusterpolicy-inject-forward-auth.yaml
resources:
  - resource.yaml
results:
  - policy: inject-authentik-forward-auth
    rule: add-forward-auth-filter
    resources:
      - whoami
    patchedResources: patched-resource.yaml
    kind: HTTPRoute
    result: pass
